<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/formulario_id">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/appbar"
        android:theme="@style/AppThemeWhite">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="#fff"
            app:title="Nova venda"
            app:expandedTitleTextAppearance="@style/TextAppearance.Design.CollapsingToolbar.Expanded.Shadow"
            app:expandedTitleMarginStart="20dp">

            <ImageView
                android:id="@+id/formulario_foto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:background="@drawable/form_background"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        android:id="@+id/formulario_btn_foto"
        android:layout_marginRight="8dp"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            //Nome
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nome do Produto"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/formulario_nome_produto"
                    android:inputType="textCapWords"/>
            </com.google.android.material.textfield.TextInputLayout>

            //Valor
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Valor (Kg)"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/formulario_valor"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            //Descricao
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Descrição do produto"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/formulario_descricao"
                    android:inputType="textCapSentences"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Categoria"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"/>
            <Spinner
                android:id="@+id/formulario_categorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                ></Spinner>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>