<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/menu_formulario_deletar"
        android:title="Deletar"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete_green"/>

    <item android:id="@+id/menu_formulario_salvar"
        android:title="Salvar"
        android:orderInCategory="200"
        app:showAsAction="always"
        android:icon="@drawable/ic_done_green"/>

</menu>
