<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:paddingBottom="8dp">

    <RelativeLayout
        android:id="@+id/product_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/product_card_bg"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/product_descript"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Nome do produto"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_seller"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="end"
                android:text="Vendedor" />
        </LinearLayout>


        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_below="@id/product_descript"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/form_background" />


    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/product_seller_image"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/photo_round"
        android:src="@drawable/ic_person"
        app:layout_constraintStart_toStartOf="@+id/product_container"
        app:layout_constraintTop_toTopOf="@+id/product_container" />
</androidx.constraintlayout.widget.ConstraintLayout>