...
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="E-mail"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Senha"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

...
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="57dp"
                android:layout_marginEnd="10dp" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:background="@drawable/btn_circle"
                android:elevation="2dp"
...
